setup single locale type, fix locale switch, fix jumping mobile layout

--- a/src/app/(frontend)/[locale]/layout.module.css
+++ b/src/app/(frontend)/[locale]/layout.module.css
@@ -1,5 +1,5 @@
 .mainLayout {
-  min-height: 100dvh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
